--- a/index.html
+++ b/index.html
@@ -61,67 +61,67 @@
     <div class="border-bottom border-2 border-print-0 border-dark mb-5 pb-5 pb-print-0 mb-print-1">
         <h3 class="h2 screen mb-4">Umiejętności</h3>
         <div class="row align-items-center">
-            <div class="col-print-1 col-3 col-md-3 col-lg-3 text-right">
+            <div class="col-print-2 col-3 col-md-3 col-lg-3 text-right">
                 <small>Javascript</small>
             </div>
-            <div class="col-print-1 col-3 col-md-3 col-lg-3 text-right">
+            <div class="col-print-2 col-3 col-md-3 col-lg-3 text-right">
                 <small>Typescript</small>
             </div>
-            <div class="col-print-1 col-3 col-md-3 col-lg-3 text-right">
+            <div class="col-print-2 col-3 col-md-3 col-lg-3 text-right">
                 <small>ECMAScript 6</small>
             </div>
-            <div class="col-print-1 col-3 col-md-3 col-lg-3 text-right">
+            <div class="col-print-2 col-3 col-md-3 col-lg-3 text-right">
                 <small>HTML</small>
             </div>
-            <div class="col-print-1 col-3 col-md-3 col-lg-3 text-right">
+            <div class="col-print-2 col-3 col-md-3 col-lg-3 text-right">
                 <small>CSS / SCSS</small>
             </div>
-            <div class="col-print-1 col-3 col-md-3 col-lg-3 text-right">
+            <div class="col-print-2 col-3 col-md-3 col-lg-3 text-right">
                 <small>Wordpress</small>
             </div>
-            <div class="col-print-1 col-3 col-md-3 col-lg-3 text-right">
+            <div class="col-print-2 col-3 col-md-3 col-lg-3 text-right">
                 <small>Sage Wordpress Theme Starter</small>
             </div>
-            <div class="col-print-1 col-3 col-md-3 col-lg-3 text-right">
+            <div class="col-print-2 col-3 col-md-3 col-lg-3 text-right">
                 <small>Blade template</small>
             </div>
-            <div class="col-print-1 col-3 col-md-3 col-lg-3 text-right">
+            <div class="col-print-2 col-3 col-md-3 col-lg-3 text-right">
                 <small>Webpack</small>
             </div>
-            <div class="col-print-1 col-3 col-md-3 col-lg-3 text-right">
+            <div class="col-print-2 col-3 col-md-3 col-lg-3 text-right">
                 <small>Vite</small>
             </div>
-            <div class="col-print-1 col-3 col-md-3 col-lg-3 text-right">
+            <div class="col-print-2 col-3 col-md-3 col-lg-3 text-right">
                 <small>Vue.js 3</small>
             </div>
-            <div class="col-print-1 col-3 col-md-3 col-lg-3 text-right">
+            <div class="col-print-2 col-3 col-md-3 col-lg-3 text-right">
                 <small>Responsive Design</small>
             </div>
-            <div class="col-print-1 col-3 col-md-3 col-lg-3 text-right">
+            <div class="col-print-2 col-3 col-md-3 col-lg-3 text-right">
                 <small>GIT</small>
             </div>
-            <div class="col-print-1 col-3 col-md-3 col-lg-3 text-right">
+            <div class="col-print-2 col-3 col-md-3 col-lg-3 text-right">
                 <small>Metodologia BEM</small>
             </div>
-            <div class="col-print-1 col-3 col-md-3 col-lg-3 text-right">
+            <div class="col-print-2 col-3 col-md-3 col-lg-3 text-right">
                 <small>Figma</small>
             </div>
-            <div class="col-print-1 col-3 col-md-3 col-lg-3 text-right">
+            <div class="col-print-2 col-3 col-md-3 col-lg-3 text-right">
                 <small>Docker</small>
             </div>
-            <div class="col-print-1 col-3 col-md-3 col-lg-3 text-right">
+            <div class="col-print-2 col-3 col-md-3 col-lg-3 text-right">
                 <small>Caprover</small>
             </div>
-            <div class="col-print-1 col-3 col-md-3 col-lg-3 text-right">
+            <div class="col-print-2 col-3 col-md-3 col-lg-3 text-right">
                 <small>MySQL</small>
             </div>
-            <div class="col-print-1 col-3 col-md-3 col-lg-3 text-right">
+            <div class="col-print-2 col-3 col-md-3 col-lg-3 text-right">
                 <small>Graphql</small>
             </div>
-            <div class="col-print-1 col-3 col-md-3 col-lg-3 text-right">
+            <div class="col-print-2 col-3 col-md-3 col-lg-3 text-right">
                 <small>REST API</small>
             </div>
-            <div class="col-print-1 col-3 col-md-3 col-lg-3 text-right">
+            <div class="col-print-2 col-3 col-md-3 col-lg-3 text-right">
                 <small>Język angielski na poziomie B2</small>
             </div>
         </div>
@@ -351,7 +351,7 @@ Ta profesjonalna aplikacja oparta na Vue.js zapewnia intuicyjne narzędzia do za
     <div class="mb-4">
         <h3 class="fs-4 fw-normal">Web aplikacja wraz z narzędziem do analizy emocjonalnej młodych ludzi</h3>
 
-        <p>Web aplikacja oparta na Vue.js umożliwiająca wykonywanie testu po rejestracji i zalogowaniu się. Test daje możliwość wyświetlenia feedbacku oraz raportu do pobrania w formacie .pdf. Aplikacja posiada 3 typy kont, blog, panel użytkownika oraz zarządzanie treścią za pomocą headless cms Strapi</p>
+        <p>Web aplikacja oparta na Vue.js, która umożliwia użytkownikom wykonywanie testów po rejestracji i zalogowaniu. Po zakończeniu testu użytkownik otrzymuje feedback oraz może pobrać raport w formacie PDF. Aplikacja obsługuje trzy rodzaje kont: blog, panel użytkownika oraz moduł zarządzania treścią z wykorzystaniem headless CMS Strapi. Dzięki temu użytkownicy mają dostęp do różnych funkcjonalności w ramach jednej aplikacji, a treści są łatwo zarządzane i aktualizowane.</p>
 
         <div>
             <span class="badge text-body border border-1">html</span>
